simple-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: azni-mysql-pod
  namespace: azni-mysql
  labels:
    app: azni-mysql
spec:
  containers:
    - name: mysql
      image: mysql:5.7
      ports:
        - containerPort: 3306
      resources:
        limits:
          memory: "512Mi"
          cpu: "500m"
        requests:
          memory: "256Mi"
          cpu: "250m"
  tolerations:
    - key: "CriticalAddonsOnly"
      operator: "Exists"
      effect: "NoSchedule"
