simple-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: azni-app-service
  namespace: azni-namspace
spec:
  selector:
    app: azni-app
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30081
  type: NodePort
