simple-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: azni-mysql-ingress
  namespace: azni-mysql
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
spec:
  rules:
    - host: azni-mysql-sctp-sandbox.com
      http:
        paths:
          - path: /mysql
            pathType: Prefix
            backend:
              service:
                name: azni-mysql-service
                port:
                  number: 3306
